--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
+DB_USER=manhdc01
+DB_PASSWORD=12345
 PORT=3000
-HOST_NAME=127.0.0.1
-DB_HOST=mongodb://127.0.0.1:27017
+HOST_NAME=0.0.0.0
+DB_HOST_WITH_DRIVER=mongodb+srv://manhdc01:12345@cluster0.z2zlgel.mongodb.net/
